# Oluso

./: .gitignore  Directory.Build.props  LICENSE  Oluso.sln  README.md  SECURITY.md
.github/workflows/: deploy-demo.yml
docs/: FEATURE_MATRIX.md  USER_GUIDE.md  migrations.md  v2-quickstart.md
samples/Oluso.Sample/: Oluso.Sample.csproj  Program.cs  README.md
samples/Oluso.Sample/Controllers/: TestController.cs
samples/Oluso.Sample/Properties/: launchSettings.json
samples/Oluso.TestClient/: Program.cs
samples/plugins/hello-plugin/: Cargo.toml  README.md  build.sh
samples/plugins/hello-plugin/src/: lib.rs
scripts/: migrations.sh
sdk/js/: README.md  package.json  tsup.config.ts
src/frontend/: package-lock.json  package.json
templates/: README.md
tests/Oluso.Core.Tests/: Oluso.Core.Tests.csproj
tests/Oluso.E2E.Tests/: OidcFlowTests.cs  Oluso.E2E.Tests.csproj
tests/Oluso.Enterprise.Fido2.Tests/: Oluso.Enterprise.Fido2.Tests.csproj  WebAuthnVerifierTests.cs
tests/Oluso.Enterprise.Ldap.Tests/: Oluso.Enterprise.Ldap.Tests.csproj
tests/Oluso.Enterprise.Saml.Tests/: Oluso.Enterprise.Saml.Tests.csproj  SamlOptionsTests.cs
tests/Oluso.Enterprise.Scim.Tests/: Oluso.Enterprise.Scim.Tests.csproj  ScimOptionsTests.cs
tests/Oluso.Integration.Tests/: EventIntegrationTests.cs  HealthCheckTests.cs  OidcAdvancedGrantTests.cs  OidcAuthorizationCodeFlowTests.cs  OidcDiscoveryTests.cs  OidcGrantTypeTests.cs  Oluso.Integration.Tests.csproj  SamlMetadataTests.cs  ScimEndpointTests.cs  TokenEndpointTests.cs
tests/Oluso.Tests/: Oluso.Tests.csproj
(+714 files in other folders)
