[package]
name = "hello-plugin"
version = "1.0.0"
edition = "2021"
description = "A simple Oluso WASM plugin example"
authors = ["Oluso Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
